[package]
name = "kanpyo"
version = "0.1.1"
edition = "2021"
exclude = ["kanpyo-dict/"]
description = "Japanese Morphological Analyzer"
keywords = ["japanese", "morphological", "analyzer"]
categories = ["text-processing", "natural-language-processing"]
license = "MIT"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
dirs = "6.0.0"
kanpyo-dict = { version = "0.1.0", path = "kanpyo-dict" }

[workspace]
members = [
    "kanpyo-dict"
]

[[bin]]
name = "kanpyo"
path = "src/bin/kanpyo.rs"
