[package]
name = "kanpyo"
version = "0.2.0"
edition = "2024"
exclude = ["kanpyo-dict/"]
description = "Japanese Morphological Analyzer"
keywords = ["japanese", "morphological", "analyzer"]
categories = ["text-processing", "natural-language-processing"]
license = "MIT"
repository = "https://github.com/togatoga/kanpyo"
homepage = "https://github.com/togatoga/kanpyo"
documentation = "https://docs.rs/kanpyo"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
dirs = "6.0.0"
kanpyo-dict = { version = "0.2.0", path = "kanpyo-dict" }

[workspace]
members = [
    "kanpyo-dict"
]

[[bin]]
name = "kanpyo"
path = "src/bin/kanpyo.rs"
