[package]
name = "kanpyo-dict"
version = "0.1.0"
edition = "2021"
exclude = ["resource/"]
description = "Dictionary Library for Kanpyo"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ipa-dict-builder"
path = "src/bin/ipa_dict_builder.rs"

[dependencies]
anyhow = "1.0.83"
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
dirs = "5.0.1"
encoding_rs = "0.8.33"
itertools = "0.13.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
zip = "2.1.3"
