[package]
name = "kanpyo-dict"
version = "0.2.0"
edition = "2024"
exclude = ["resource/"]
description = "Dictionary Library for Kanpyo"
license = "MIT"
repository = "https://github.com/togatoga/kanpyo"
homepage = "https://github.com/togatoga/kanpyo"
documentation = "https://docs.rs/kanpyo-dict"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ipa-dict-builder"
path = "src/bin/ipa_dict_builder.rs"

[dependencies]
bincode = "2.0.0"
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
dirs = "6.0.0"
encoding_rs = "0.8.33"
itertools = "0.14.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "2.0.9"
zip = "8.0.0"
